# minimal-rust-android-workflow-without-java

./: Cargo.toml  README.md  build.sh
src/: lib.rs  lib_android.rs  main.rs
