[package]
name = "minimal_android_workflow_without_java"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["cdylib"]

[dependencies]
log = "0.4.22"

[target.'cfg(target_os = "android")'.dependencies] 
android-activity = { version = "0.6.0", features = ["native-activity"] }
android_logger = "0.14.1"
ndk = "0.9.0"
ndk-sys = "0.6.0"

[package.metadata.android]

build_targets = [ "aarch64-linux-android" ]
